# Akantu

./: .arcconfig  .arclint  .clang-format  .clang-tidy  .codeclimate.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeCache.txt  CMakeDebugMessages.cmake  CMakeDetermineCCompiler.cmake  CMakeFlagsHandling.cmake  CMakeLists.txt  CMakePackagesSystem.cmake  CMakeVersionGenerator.cmake  CTestConfig.cmake  Dockerfile  FindBlackDynamite.cmake  FindCBLAS.cmake  FindCppArray.cmake  FindEPSN.cmake  FindFFTW.cmake  FindGMSH.cmake  FindIOHelper.cmake  FindInkscape.cmake  FindLAMMPS.cmake  FindMumps.cmake  FindNLopt.cmake  FindPETSc.cmake  FindPQXX.cmake  FindPTScotch.cmake  FindParaDiS.cmake  FindPostgreSQL.cmake  FindQVIEW.cmake  FindSCOTCH.cmake  FindSIMULPACK.cmake  (+9 more)
doc/: CMakeLists.txt  uml.dia
doc/coding_convention/: README  akantu-input-mode.el
doc/dev-doc/: CMakeLists.txt  akantu.dox.in  changelog.rst  conf.py.in  index.rst  reference.rst
doc/doxygen/: CMakeLists.txt  akantu.dox.in
doc/manual/: CMakeLists.txt  Makefile  manual-appendix-elements.tex  manual-appendix-materials-cohesive.tex  manual-appendix-materials-non-local.tex  manual-appendix-materials.tex  manual-appendix-packages.tex  manual-authors.tex  manual-backmatter.tex  manual-bibliography.bib  manual-bibliographystyle.bst  manual-changelog.tex  manual-cohesive_elements.tex  manual-cohesive_elements_insertion.tex  manual-cohesive_laws.tex  manual-constitutive-laws-non_local.tex  manual-constitutive-laws.tex  manual-elements.tex  manual-feengine.tex  manual-gettingstarted.tex  manual-heattransfermodel.tex  manual-introduction.tex  manual-io.tex  manual-lumping.tex  manual-macros.sty  manual-parallel.tex  manual-planning.tex  manual-python.tex  manual-solidmechanicsmodel.tex  manual-structuralmechanicsmodel-elements.tex  manual-structuralmechanicsmodel.tex  manual-titlepages.tex  manual.aux  manual.cls  manual.idx  manual.out  manual.sty  manual.tex  manual.toc  version-definition.tex.in
python/: CMakeLists.txt  py11_akantu.cc  py_aka_array.hh  py_aka_boundary_conditions.cc  py_aka_boundary_conditions.hh  py_aka_common.cc  py_aka_common.hh  py_aka_error.cc  py_aka_error.hh  py_aka_heat_transfer_model.cc  py_aka_heat_transfer_model.hh  py_aka_material.hh  py_aka_mesh.cc  py_aka_mesh.hh  py_aka_model.cc  py_aka_model.hh  py_aka_parser.cc  py_aka_solid_mechanics_model.cc  py_aka_solid_mechanics_model_cohesive.cc  py_aka_solid_mechanics_model_cohesive.hh  py_akantu.cc  py_akantu.hh  py_boundary_conditions.cc  py_boundary_conditions.hh  py_dumpable.cc  py_dumpable.hh  py_fe_engine.cc  py_fe_engine.hh  py_fragment_manager.cc  py_fragment_manager.hh  py_group_manager.cc  py_group_manager.hh  py_heat_transfer_model.cc  py_heat_transfer_model.hh  py_material.cc  py_material.hh  py_mesh.cc  py_mesh.hh  py_model.cc  py_model.hh  (+13 more)
python/akantu/: __init__.py  _version.py
python/pybind11/: CMakeLists.txt  py_aka_array.cc  py_aka_array.hh  py_aka_boundary_conditions.cc  py_aka_common.cc  py_aka_common.hh  py_aka_fe_engine.cc  py_aka_fe_engine.hh  py_aka_material.cc  py_aka_mesh.cc  py_aka_model.cc  py_aka_parser.cc  py_aka_solid_mechanics_model.cc  py_aka_solid_mechanics_model.hh  py_aka_solid_mechanics_model_cohesive.cc  py_akantu.cc
python/swig/: CMakeLists.txt  aka_array.i  aka_common.i  aka_csr.i  akantu.i  communicator.i  fe_engine.i  heat_transfer_model.i  load_functions.i  material.i  mesh.i  mesh_utils.i  model.i  numpy.i  parser.i  setup.py.in  solid_mechanics_model.i  solid_mechanics_model_cohesive.i  sparse_matrix.i  structural_mechanics_model.i
simulations/: CMakeLists.txt
simulations/cmake/: AkantuExamplesMacros.cmake  FindEPSN.cmake  FindPTScotch.cmake  FindQVIEW.cmake
simulations/double_cantilever_beam_tests/: CMakeLists.txt  mesh_dcb_2d.geo  test_dcb_2d.cc
src/: CMakeLists.txt  akantu_simtools.hh  cohesive_element_inserter_inline_impl.cc  cohesive_element_inserter_parallel.cc  dumper_igfem_connectivity.hh  dumper_igfem_element_iterator.hh  dumper_igfem_element_partition.hh  dumper_igfem_elemental_field.hh  dumper_igfem_generic_elemental_field.hh  element_class_igfem.cc  element_class_igfem.hh  element_class_igfem_triangle_3_inline_impl.cc  facet_stress_synchronizer.cc  facet_stress_synchronizer.hh  facet_synchronizer.cc  facet_synchronizer.hh  facet_synchronizer_inline_impl.cc  fe_engine_template_tmpl_igfem.hh  geometrical_element_igfem.cc  igfem_element.cc  igfem_element.hh  igfem_enrichment.cc  igfem_enrichment.hh  igfem_enrichment_inline_impl.cc  igfem_helper.hh  integrator_gauss_igfem.hh  integrator_gauss_igfem_inline_impl.cc  interpolation_element_igfem.cc  material_brittle.cc  material_damage_iterative.hh  material_damage_linear_inline_impl.cc  material_extra_includes.hh  material_non_local_extra_includes.hh  material_stiffness_proportional.cc  material_stiffness_proportional.hh  material_viscoplastic.hh  material_viscoplastic_inline_impl.cc  material_vreepeerlings.hh  material_vreepeerlings_inline_impl.cc  mesh_igfem_spherical_growing_gel.hh  (+14 more)
src/boundary_conditions/: force_based_dirichlet.hh  inclined_flat_dirichlet.hh  spring_bc.hh
src/common/: aka_array.cc  aka_array.hh  aka_array_printer.hh  aka_array_tmpl.hh  aka_ball.cc  aka_ball.hh  aka_bbox.hh  aka_blas_lapack.hh  aka_bounding_box.cc  aka_bounding_box.hh  aka_ci_string.hh  aka_circular_array.hh  aka_circular_array_inline_impl.cc  aka_circular_array_inline_impl.hh  aka_common.cc  aka_common.hh  aka_common_inline_impl.cc  aka_common_inline_impl.hh  aka_compatibilty_with_cpp_standard.hh  aka_config.hh.in  aka_csr.hh  aka_debug_tools.hh  aka_element_classes_info.hh  aka_element_classes_info.hh.in  aka_element_classes_info_inline_impl.cc  aka_element_classes_info_inline_impl.hh  aka_enum_macros.hh  aka_error.cc  aka_error.hh  aka_event_handler_manager.hh  aka_extern.cc  aka_factory.hh  aka_fwd.hh  aka_geometry.cc  (+43 more)
test/: CMakeLists.txt  CMakeLists.txt~  pybind11_akantu.cc  pybind11_akantu.hh  test_facet_synchronizer.cc  test_gtest_main.cc  test_gtest_utils.hh  test_iterators.cc  test_tuples.cc
(+2255 files in other folders)
